--- a/Project1-House_Price_Prediction/House_Price_Prediction.ipynb
+++ b/Project1-House_Price_Prediction/House_Price_Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8771e5b9-d60f-42db-9570-0e0010fc7bdf",
    "metadata": {},
    "outputs": [],
@@ -24,12 +24,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "62c85e6e-4bd4-4b69-9abb-a7246b70799b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install xgboost"
+    "#pip install xgboost\n",
+    "import xgboost as xgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7ecbab06-3ede-4ac6-96fd-ece166ecb5dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python :  3.11.7\n",
+      "Pandas :  2.1.4\n",
+      "XGBoost :  2.0.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import platform\n",
+    "print(\"Python : \",platform.python_version())\n",
+    "print(\"Pandas : \",pd.__version__)\n",
+    "print(\"XGBoost : \",xgb.__version__)"
    ]
   },
   {
